--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">AppPlayground</string>
+    <string name="application_title">Anpopo Playground</string>
+    <string name="password_taker">비밀번호를 입력하세요</string>
+    <string name="entry_button">입장</string>
 </resources>
